parser.output
Terminals unused in grammar

   TOKEN_ISNIL
   EXPR


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program statement

    3 statement: TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_SEMICOLON
    4          | TOKEN_LAZY TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_SEMICOLON
    5          | TOKEN_PRINT TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_SEMICOLON
    6          | TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_THEN program TOKEN_ELSE program TOKEN_FI
    7          | TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_THEN program TOKEN_FI
    8          | TOKEN_WHILE TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_DO program TOKEN_OB
    9          | TOKEN_FUNC TOKEN_IDENTIFIER TOKEN_LPAREN parameter_list TOKEN_RPAREN program TOKEN_RET expression TOKEN_SEMICOLON TOKEN_CNUF
   10          | TOKEN_ERROR

   11 expression: TOKEN_INT
   12           | TOKEN_MINUS expression
   13           | TOKEN_STRING
   14           | TOKEN_READSTRING TOKEN_LPAREN TOKEN_RPAREN
   15           | TOKEN_READINT TOKEN_LPAREN TOKEN_RPAREN
   16           | TOKEN_IDENTIFIER
   17           | expression TOKEN_PLUS expression
   18           | expression TOKEN_MINUS expression
   19           | expression TOKEN_TIMES expression
   20           | expression TOKEN_DIVIDE expression
   21           | expression TOKEN_MODULO expression
   22           | expression TOKEN_CONS expression
   23           | expression TOKEN_CONCAT expression
   24           | TOKEN_HD expression
   25           | TOKEN_TL expression
   26           | TOKEN_NIL
   27           | expression TOKEN_EQ expression
   28           | expression TOKEN_NEQ expression
   29           | expression TOKEN_LT expression
   30           | expression TOKEN_LEQ expression
   31           | expression TOKEN_GT expression
   32           | expression TOKEN_GEQ expression
   33           | TOKEN_NOT expression
   34           | expression TOKEN_AND expression
   35           | expression TOKEN_OR expression
   36           | TOKEN_LPAREN expression TOKEN_RPAREN
   37           | TOKEN_IDENTIFIER TOKEN_LPAREN call_list TOKEN_RPAREN
   38           | TOKEN_ERROR

   39 parameter_list: %empty
   40               | parameter_nonempty_list

   41 parameter_nonempty_list: TOKEN_IDENTIFIER
   42                        | TOKEN_LAZY TOKEN_IDENTIFIER
   43                        | parameter_nonempty_list TOKEN_COMMA TOKEN_IDENTIFIER
   44                        | parameter_nonempty_list TOKEN_COMMA TOKEN_LAZY TOKEN_IDENTIFIER

   45 call_list: %empty
   46          | call_nonempty_list

   47 call_nonempty_list: expression
   48                   | call_nonempty_list TOKEN_COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_IF (258) 6 7
TOKEN_LPAREN (259) 5 6 7 8 9 14 15 36 37
TOKEN_RPAREN (260) 5 6 7 8 9 14 15 36 37
TOKEN_THEN (261) 6 7
TOKEN_ELSE (262) 6
TOKEN_FI (263) 6 7
TOKEN_ASSIGN (264) 3 4
TOKEN_SEMICOLON (265) 3 4 5 9
TOKEN_WHILE (266) 8
TOKEN_DO (267) 8
TOKEN_OB (268) 8
TOKEN_PRINT (269) 5
TOKEN_READSTRING (270) 14
TOKEN_READINT (271) 15
TOKEN_FUNC (272) 9
TOKEN_IDENTIFIER (273) 3 4 9 16 37 41 42 43 44
TOKEN_COMMA (274) 43 44 48
TOKEN_RET (275) 9
TOKEN_CNUF (276) 9
TOKEN_PLUS (277) 17
TOKEN_MINUS (278) 12 18
TOKEN_TIMES (279) 19
TOKEN_DIVIDE (280) 20
TOKEN_MODULO (281) 21
TOKEN_CONS (282) 22
TOKEN_CONCAT (283) 23
TOKEN_HD (284) 24
TOKEN_TL (285) 25
TOKEN_INT (286) 11
TOKEN_STRING (287) 13
TOKEN_NIL (288) 26
TOKEN_LT (289) 29
TOKEN_LEQ (290) 30
TOKEN_GEQ (291) 32
TOKEN_GT (292) 31
TOKEN_EQ (293) 27
TOKEN_NEQ (294) 28
TOKEN_NOT (295) 33
TOKEN_AND (296) 34
TOKEN_OR (297) 35
TOKEN_ISNIL (298)
TOKEN_ERROR (299) 10 38
TOKEN_LAZY (300) 4 42 44
EXPR (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2, on right: 0 2 6 7 8 9
statement (49)
    on left: 3 4 5 6 7 8 9 10, on right: 2
expression (50)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38, on right: 3 4 5 6 7 8 9 12 17 18
    19 20 21 22 23 24 25 27 28 29 30 31 32 33 34 35 36 47 48
parameter_list (51)
    on left: 39 40, on right: 9
parameter_nonempty_list (52)
    on left: 41 42 43 44, on right: 40 43 44
call_list (53)
    on left: 45 46, on right: 37
call_nonempty_list (54)
    on left: 47 48, on right: 46 48


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . statement

    $end              shift, and go to state 2
    TOKEN_IF          shift, and go to state 3
    TOKEN_WHILE       shift, and go to state 4
    TOKEN_PRINT       shift, and go to state 5
    TOKEN_FUNC        shift, and go to state 6
    TOKEN_IDENTIFIER  shift, and go to state 7
    TOKEN_ERROR       shift, and go to state 8
    TOKEN_LAZY        shift, and go to state 9

    statement  go to state 10


State 2

    0 $accept: program $end .

    $default  accept


State 3

    6 statement: TOKEN_IF . TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_THEN program TOKEN_ELSE program TOKEN_FI
    7          | TOKEN_IF . TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_THEN program TOKEN_FI

    TOKEN_LPAREN  shift, and go to state 11


State 4

    8 statement: TOKEN_WHILE . TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_DO program TOKEN_OB

    TOKEN_LPAREN  shift, and go to state 12


State 5

    5 statement: TOKEN_PRINT . TOKEN_LPAREN expression TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_LPAREN  shift, and go to state 13


State 6

    9 statement: TOKEN_FUNC . TOKEN_IDENTIFIER TOKEN_LPAREN parameter_list TOKEN_RPAREN program TOKEN_RET expression TOKEN_SEMICOLON TOKEN_CNUF

    TOKEN_IDENTIFIER  shift, and go to state 14


State 7

    3 statement: TOKEN_IDENTIFIER . TOKEN_ASSIGN expression TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 15


State 8

   10 statement: TOKEN_ERROR .

    $default  reduce using rule 10 (statement)


State 9

    4 statement: TOKEN_LAZY . TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 16


State 10

    2 program: program statement .

    $default  reduce using rule 2 (program)


State 11

    6 statement: TOKEN_IF TOKEN_LPAREN . expression TOKEN_RPAREN TOKEN_THEN program TOKEN_ELSE program TOKEN_FI
    7          | TOKEN_IF TOKEN_LPAREN . expression TOKEN_RPAREN TOKEN_THEN program TOKEN_FI

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 29


State 12

    8 statement: TOKEN_WHILE TOKEN_LPAREN . expression TOKEN_RPAREN TOKEN_DO program TOKEN_OB

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 30


State 13

    5 statement: TOKEN_PRINT TOKEN_LPAREN . expression TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 31


State 14

    9 statement: TOKEN_FUNC TOKEN_IDENTIFIER . TOKEN_LPAREN parameter_list TOKEN_RPAREN program TOKEN_RET expression TOKEN_SEMICOLON TOKEN_CNUF

    TOKEN_LPAREN  shift, and go to state 32


State 15

    3 statement: TOKEN_IDENTIFIER TOKEN_ASSIGN . expression TOKEN_SEMICOLON

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 33


State 16

    4 statement: TOKEN_LAZY TOKEN_IDENTIFIER . TOKEN_ASSIGN expression TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 34


State 17

   36 expression: TOKEN_LPAREN . expression TOKEN_RPAREN

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 35


State 18

   14 expression: TOKEN_READSTRING . TOKEN_LPAREN TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 36


State 19

   15 expression: TOKEN_READINT . TOKEN_LPAREN TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 37


State 20

   16 expression: TOKEN_IDENTIFIER .
   37           | TOKEN_IDENTIFIER . TOKEN_LPAREN call_list TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 38

    $default  reduce using rule 16 (expression)


State 21

   12 expression: TOKEN_MINUS . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 39


State 22

   24 expression: TOKEN_HD . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 40


State 23

   25 expression: TOKEN_TL . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 41


State 24

   11 expression: TOKEN_INT .

    $default  reduce using rule 11 (expression)


State 25

   13 expression: TOKEN_STRING .

    $default  reduce using rule 13 (expression)


State 26

   26 expression: TOKEN_NIL .

    $default  reduce using rule 26 (expression)


State 27

   33 expression: TOKEN_NOT . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 42


State 28

   38 expression: TOKEN_ERROR .

    $default  reduce using rule 38 (expression)


State 29

    6 statement: TOKEN_IF TOKEN_LPAREN expression . TOKEN_RPAREN TOKEN_THEN program TOKEN_ELSE program TOKEN_FI
    7          | TOKEN_IF TOKEN_LPAREN expression . TOKEN_RPAREN TOKEN_THEN program TOKEN_FI
   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    TOKEN_RPAREN  shift, and go to state 43
    TOKEN_PLUS    shift, and go to state 44
    TOKEN_MINUS   shift, and go to state 45
    TOKEN_TIMES   shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 47
    TOKEN_MODULO  shift, and go to state 48
    TOKEN_CONS    shift, and go to state 49
    TOKEN_CONCAT  shift, and go to state 50
    TOKEN_LT      shift, and go to state 51
    TOKEN_LEQ     shift, and go to state 52
    TOKEN_GEQ     shift, and go to state 53
    TOKEN_GT      shift, and go to state 54
    TOKEN_EQ      shift, and go to state 55
    TOKEN_NEQ     shift, and go to state 56
    TOKEN_AND     shift, and go to state 57
    TOKEN_OR      shift, and go to state 58


State 30

    8 statement: TOKEN_WHILE TOKEN_LPAREN expression . TOKEN_RPAREN TOKEN_DO program TOKEN_OB
   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    TOKEN_RPAREN  shift, and go to state 59
    TOKEN_PLUS    shift, and go to state 44
    TOKEN_MINUS   shift, and go to state 45
    TOKEN_TIMES   shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 47
    TOKEN_MODULO  shift, and go to state 48
    TOKEN_CONS    shift, and go to state 49
    TOKEN_CONCAT  shift, and go to state 50
    TOKEN_LT      shift, and go to state 51
    TOKEN_LEQ     shift, and go to state 52
    TOKEN_GEQ     shift, and go to state 53
    TOKEN_GT      shift, and go to state 54
    TOKEN_EQ      shift, and go to state 55
    TOKEN_NEQ     shift, and go to state 56
    TOKEN_AND     shift, and go to state 57
    TOKEN_OR      shift, and go to state 58


State 31

    5 statement: TOKEN_PRINT TOKEN_LPAREN expression . TOKEN_RPAREN TOKEN_SEMICOLON
   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    TOKEN_RPAREN  shift, and go to state 60
    TOKEN_PLUS    shift, and go to state 44
    TOKEN_MINUS   shift, and go to state 45
    TOKEN_TIMES   shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 47
    TOKEN_MODULO  shift, and go to state 48
    TOKEN_CONS    shift, and go to state 49
    TOKEN_CONCAT  shift, and go to state 50
    TOKEN_LT      shift, and go to state 51
    TOKEN_LEQ     shift, and go to state 52
    TOKEN_GEQ     shift, and go to state 53
    TOKEN_GT      shift, and go to state 54
    TOKEN_EQ      shift, and go to state 55
    TOKEN_NEQ     shift, and go to state 56
    TOKEN_AND     shift, and go to state 57
    TOKEN_OR      shift, and go to state 58


State 32

    9 statement: TOKEN_FUNC TOKEN_IDENTIFIER TOKEN_LPAREN . parameter_list TOKEN_RPAREN program TOKEN_RET expression TOKEN_SEMICOLON TOKEN_CNUF

    TOKEN_IDENTIFIER  shift, and go to state 61
    TOKEN_LAZY        shift, and go to state 62

    $default  reduce using rule 39 (parameter_list)

    parameter_list           go to state 63
    parameter_nonempty_list  go to state 64


State 33

    3 statement: TOKEN_IDENTIFIER TOKEN_ASSIGN expression . TOKEN_SEMICOLON
   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    TOKEN_SEMICOLON  shift, and go to state 65
    TOKEN_PLUS       shift, and go to state 44
    TOKEN_MINUS      shift, and go to state 45
    TOKEN_TIMES      shift, and go to state 46
    TOKEN_DIVIDE     shift, and go to state 47
    TOKEN_MODULO     shift, and go to state 48
    TOKEN_CONS       shift, and go to state 49
    TOKEN_CONCAT     shift, and go to state 50
    TOKEN_LT         shift, and go to state 51
    TOKEN_LEQ        shift, and go to state 52
    TOKEN_GEQ        shift, and go to state 53
    TOKEN_GT         shift, and go to state 54
    TOKEN_EQ         shift, and go to state 55
    TOKEN_NEQ        shift, and go to state 56
    TOKEN_AND        shift, and go to state 57
    TOKEN_OR         shift, and go to state 58


State 34

    4 statement: TOKEN_LAZY TOKEN_IDENTIFIER TOKEN_ASSIGN . expression TOKEN_SEMICOLON

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 66


State 35

   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression
   36           | TOKEN_LPAREN expression . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 67
    TOKEN_PLUS    shift, and go to state 44
    TOKEN_MINUS   shift, and go to state 45
    TOKEN_TIMES   shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 47
    TOKEN_MODULO  shift, and go to state 48
    TOKEN_CONS    shift, and go to state 49
    TOKEN_CONCAT  shift, and go to state 50
    TOKEN_LT      shift, and go to state 51
    TOKEN_LEQ     shift, and go to state 52
    TOKEN_GEQ     shift, and go to state 53
    TOKEN_GT      shift, and go to state 54
    TOKEN_EQ      shift, and go to state 55
    TOKEN_NEQ     shift, and go to state 56
    TOKEN_AND     shift, and go to state 57
    TOKEN_OR      shift, and go to state 58


State 36

   14 expression: TOKEN_READSTRING TOKEN_LPAREN . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 68


State 37

   15 expression: TOKEN_READINT TOKEN_LPAREN . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 69


State 38

   37 expression: TOKEN_IDENTIFIER TOKEN_LPAREN . call_list TOKEN_RPAREN

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    $default  reduce using rule 45 (call_list)

    expression          go to state 70
    call_list           go to state 71
    call_nonempty_list  go to state 72


State 39

   12 expression: TOKEN_MINUS expression .
   17           | expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    TOKEN_TIMES   shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 47
    TOKEN_MODULO  shift, and go to state 48
    TOKEN_CONS    shift, and go to state 49

    $default  reduce using rule 12 (expression)


State 40

   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   24           | TOKEN_HD expression .
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    $default  reduce using rule 24 (expression)


State 41

   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   25           | TOKEN_TL expression .
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    $default  reduce using rule 25 (expression)


State 42

   17 expression: expression . TOKEN_PLUS expression
   18           | expression . TOKEN_MINUS expression
   19           | expression . TOKEN_TIMES expression
   20           | expression . TOKEN_DIVIDE expression
   21           | expression . TOKEN_MODULO expression
   22           | expression . TOKEN_CONS expression
   23           | expression . TOKEN_CONCAT expression
   27           | expression . TOKEN_EQ expression
   28           | expression . TOKEN_NEQ expression
   29           | expression . TOKEN_LT expression
   30           | expression . TOKEN_LEQ expression
   31           | expression . TOKEN_GT expression
   32           | expression . TOKEN_GEQ expression
   33           | TOKEN_NOT expression .
   34           | expression . TOKEN_AND expression
   35           | expression . TOKEN_OR expression

    $default  reduce using rule 33 (expression)


State 43

    6 statement: TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN . TOKEN_THEN program TOKEN_ELSE program TOKEN_FI
    7          | TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN . TOKEN_THEN program TOKEN_FI

    TOKEN_THEN  shift, and go to state 73


State 44

   17 expression: expression TOKEN_PLUS . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 74


State 45

   18 expression: expression TOKEN_MINUS . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 75


State 46

   19 expression: expression TOKEN_TIMES . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 76


State 47

   20 expression: expression TOKEN_DIVIDE . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 77


State 48

   21 expression: expression TOKEN_MODULO . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 78


State 49

   22 expression: expression TOKEN_CONS . expression

    TOKEN_LPAREN      shift, and go to state 17
    TOKEN_READSTRING  shift, and go to state 18
    TOKEN_READINT     shift, and go to state 19
    TOKEN_IDENTIFIER  shift, and go to state 20
    TOKEN_MINUS       shift, and go to state 21
    TOKEN_HD          shift, and go to state 22
    TOKEN_TL          shift, and go to state 23
    TOKEN_INT         shift, and go to state 24
    TOKEN_STRING      shift, and go to state 25
    TOKEN_NIL         shift, and go to state 26
    TOKEN_NOT         shift, and go to state 27
    TOKEN_ERROR       shift, and go to state 28

    expression  go to state 79


State 50

   23 expression: expression TOKEN_CONCAT . expression
